# scq-machine

./: .gitignore  CMakeLists.txt  ostis-example-app.ini  repo.path
kb/: rude_example.gwf
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/scqQueryModule/: scqQueryModule.cpp  scqQueryModule.hpp
problem-solver/cxx/scqQueryModule/agents/: relationQueryAgent.cpp  relationQueryAgent.hpp
scq-machine/: main.cpp
scq-machine/parser/: fragment_parser.cpp  fragment_parser.hpp  operation_parser.cpp  operation_parser.hpp  parser.cpp  parser.hpp  parser_context.cpp  parser_context.hpp  scq_node.hpp  tokenizer.cpp  tokenizer.hpp
scq-machine/parser/operations/: operation_parser.cpp  operation_parser.hpp  scq_mutation.hpp  scq_operation.cpp  scq_operation.hpp  scq_operations.cpp  scq_query.hpp  scq_subscription.hpp
scq-machine/resolver/: keynodes.hpp  mutation_resolver.cpp  mutation_resolver.hpp  query_resolver.cpp  query_resolver.hpp  resolver.cpp  resolver.hpp  resolver_constants.hpp
scq-machine/scq-model/: argument.cpp  argument.hpp  directive.cpp  directive.hpp  field.cpp  field.hpp  fragment.cpp  fragment.hpp  query.cpp  query.hpp
scq-machine/scq-model/operations/: base_operation.cpp  base_operation.hpp  mutation.hpp  query.hpp  subscription.hpp
scq-machine/scq_model/: argument.cpp  argument.hpp  directive.cpp  directive.hpp  field.cpp  field.hpp  fragment.cpp  operation.cpp  query.cpp  query.hpp
scq-machine/scq_model/operations/: base_operation.hpp  mutation.hpp  query.hpp  subscription.hpp
scq-machine/tests/: main.cpp  parser.cpp  resolver.cpp  tokenizer.cpp
scq-machine/tokenizer/: tokenizer.cpp  tokenizer.hpp
(+17 files in other folders)
